Simplify refresh of views when focus changes